pam_module_map = 'modules.map'
pam_module_map_path = meson.current_source_dir() / pam_module_map

pam_module_link_deps = ['..' / pam_module_map]
pam_module_link_args = ['-Wl,--version-script=' + pam_module_map_path]

subdir('pam_access')
subdir('pam_canonicalize_user')
subdir('pam_debug')
subdir('pam_deny')
subdir('pam_echo')
subdir('pam_env')
subdir('pam_exec')
subdir('pam_faildelay')
subdir('pam_faillock')
subdir('pam_filter')
subdir('pam_ftp')
subdir('pam_group')
subdir('pam_issue')
subdir('pam_keyinit')
subdir('pam_lastlog')
subdir('pam_limits')
subdir('pam_listfile')
subdir('pam_localuser')
subdir('pam_loginuid')
subdir('pam_mail')
subdir('pam_mkhomedir')
subdir('pam_motd')
subdir('pam_namespace')
subdir('pam_nologin')
subdir('pam_permit')
subdir('pam_pwhistory')
subdir('pam_rhosts')
subdir('pam_rootok')
subdir('pam_securetty')
subdir('pam_selinux')
subdir('pam_sepermit')
subdir('pam_setquota')
subdir('pam_shells')
subdir('pam_stress')
subdir('pam_succeed_if')
subdir('pam_time')
subdir('pam_timestamp')
subdir('pam_tty_audit')
subdir('pam_umask')
subdir('pam_unix')
subdir('pam_userdb')
subdir('pam_usertype')
subdir('pam_warn')
subdir('pam_wheel')
subdir('pam_xauth')
